// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useContextMenu > Read-only mode > should return the correct actions when right clicking a Node 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": true,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": true,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": true,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": true,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > Read-only mode > should return the correct actions when right clicking a sticky 1`] = `
[
  {
    "disabled": true,
    "id": "open",
    "label": "Edit sticky note",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": true,
    "id": "change_color",
    "label": "Change color",
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": true,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": true,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should return the correct actions opening the menu from the button 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should return the correct actions when right clicking a Node 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should return the correct actions when right clicking a sticky 1`] = `
[
  {
    "disabled": false,
    "id": "open",
    "label": "Edit sticky note",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "change_color",
    "label": "Change color",
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should show "Go to Sub-workflow" action (disabled) when node is "Execute Workflow" without a set workflow 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": true,
    "id": "open_sub_workflow",
    "label": "Go to Sub-workflow",
    "shortcut": {
      "keys": [
        "O",
      ],
      "metaKey": true,
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should show "Go to Sub-workflow" action (disabled) when node is "Workflow Tool" without a set workflow 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": true,
    "id": "open_sub_workflow",
    "label": "Go to Sub-workflow",
    "shortcut": {
      "keys": [
        "O",
      ],
      "metaKey": true,
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should show "Go to Sub-workflow" action (enabled) when node is "Execute Workflow" with a set workflow 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": false,
    "id": "open_sub_workflow",
    "label": "Go to Sub-workflow",
    "shortcut": {
      "keys": [
        "O",
      ],
      "metaKey": true,
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should show "Go to Sub-workflow" action (enabled) when node is "Workflow Tool" with a set workflow 1`] = `
[
  {
    "id": "open",
    "label": "Open...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Execute step",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename",
    "shortcut": {
      "keys": [
        "Space",
      ],
    },
  },
  {
    "disabled": false,
    "id": "open_sub_workflow",
    "label": "Go to Sub-workflow",
    "shortcut": {
      "keys": [
        "O",
      ],
      "metaKey": true,
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert node to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should support opening and closing (default = right click on canvas) 1`] = `
[
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate 2 nodes",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin 2 nodes",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy 2 nodes",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate 2 nodes",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "divided": true,
    "id": "tidy_up",
    "label": "Tidy up selection",
    "shortcut": {
      "altKey": true,
      "keys": [
        "T",
      ],
      "shiftKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "extract_sub_workflow",
    "label": "Convert 2 nodes to sub-workflow",
    "shortcut": {
      "altKey": true,
      "keys": [
        "X",
      ],
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete 2 nodes",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;
